# GeoDataStudio

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
TestData/: MonitoringData.csv  MonitoringData1.csv  SpatialData.csv  SpatialData1.csv
